duniverse/menhirLib.20200211/test/static/bad/multiple-type-definition-modules-1.mly
%type<int> a
%%

%public a: {}
